# ai-workflow-lab

./: README.md  main.py  pyproject.toml
.circleci/: config.yml
.github/workflows/: ci.yml
src/ai_workflow_lab/: app.py
tests/: test_health.py  test_metrics.py  test_version.py
